# python-handbook

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
chapters/: README.md
chapters/00-backend-foundations/: 01-request-journey.md  02-tcp-udp.md  03-dns-ip-port.md  04-http-messages.md  05-https-tls.md  06-process-thread.md  07-file-descriptor-io.md  08-signals-lifecycle.md  09-shell-env-diagnostics.md  10-summary.md  README.md
chapters/01-getting-started/: 01-why-python.md  02-install-and-interpreter.md  03-repl-and-first-program.md  04-pip-and-packages.md  05-venv.md  13-summary.md  (+8 more)
examples/: README.md
exercises/: README.md
interview/: README.md  part01-getting-started.md  part02-fundamentals.md  part03-data-structures.md  part04-oop.md  part05-typing.md  part06-error-handling.md  part07-iterators-generators.md  part08-functional-decorators.md  part09-concurrency.md  part10-cpython-internals.md  part11-stdlib.md  part12-testing.md  part13-tooling-packaging.md  part14-web.md  part15-database.md  part16-architecture.md  part17-data-science.md  part18-performance.md  part19-cloud-native.md  part20-security-system-design.md  part21-microservices.md  part22-distributed-systems.md  part23-data-analysis.md  part24-business-analytics.md  part25-machine-learning.md  part26-advanced-ml.md  part27-deep-learning.md  part28-llm-genai.md  part29-ai-applications.md  part30-production-ai.md  part31-cloud-platform-deployment.md
project/: README.md  __init__.py
scripts/: check_chapters.py  gen_nav.py
solutions/: README.md
(+714 files in other folders)
